--- a/src/components/marvelLogo/MarvelLogo.scss
+++ b/src/components/marvelLogo/MarvelLogo.scss
@@ -43,6 +43,9 @@
     0% {
       opacity: 0;
     }
+    65% {
+      opacity: 0;
+    }
     70% {
       opacity: 1;
     }
